--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
   },
   "dependencies": {
     "next": "9.5.5",
+    "nodemailer": "^6.4.14",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.2",
+    "@types/nodemailer": "^6.4.0",
+    "@types/react": "^16.9.53",
+    "typescript": "^4.0.3"
   }
 }
