--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "build": "NODE_ENV=production next build",
+    "start": "NODE_ENV=production next start",
+    "deploy": "yarn build && screen -dmS node yarn start"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "next": "9.5.5",
     "nodemailer": "^6.4.14",
     "react": "17.0.1",
