--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "deploy": "yarn build && screen -dmS node yarn start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "classnames": "^2.2.6",
     "express": "^4.17.1",
     "next": "9.5.5",
