--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/icons": "^4.9.1",
     "classnames": "^2.2.6",
     "express": "^4.17.1",
+    "getmac": "^5.16.0",
     "next": "9.5.5",
     "nodemailer": "^6.4.14",
     "react": "17.0.1",
