--- a/package.json
+++ b/package.json
@@ -12,17 +12,20 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "classnames": "^2.2.6",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "getmac": "^5.16.0",
     "next": "9.5.5",
     "nodemailer": "^6.4.14",
+    "query-string": "^6.13.6",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
+    "@types/cors": "^2.8.8",
     "@types/node": "^14.14.2",
     "@types/nodemailer": "^6.4.0",
+    "@types/query-string": "^6.3.0",
     "@types/react": "^16.9.53",
     "sass": "^1.27.0",
     "typescript": "^4.0.3"
