--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "NODE_ENV=production next build",
     "start": "NODE_ENV=production next start",
-    "deploy": "yarn build && screen -dmS node yarn start"
+    "createtables": "node scripts/createTables.js",
+    "deploy": "yarn createtables && yarn build && screen -dmS node yarn start"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -18,7 +20,9 @@
     "nodemailer": "^6.4.14",
     "query-string": "^6.13.6",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-google-recaptcha": "^2.1.0",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
@@ -27,6 +31,8 @@
     "@types/nodemailer": "^6.4.0",
     "@types/query-string": "^6.3.0",
     "@types/react": "^16.9.53",
+    "@types/react-google-recaptcha": "^2.1.0",
+    "@types/sqlite3": "^3.1.6",
     "sass": "^1.27.0",
     "typescript": "^4.0.3"
   }
