--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "nodemailer": "^6.4.14",
     "query-string": "^6.13.6",
     "react": "17.0.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "17.0.1",
     "react-google-recaptcha": "^2.1.0",
+    "react-google-recaptcha-v3": "^1.7.0",
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
