--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "NODE_ENV=production next build",
     "start": "NODE_ENV=production next start",
     "createtables": "node scripts/createTables.js",
-    "deploy": "yarn createtables && yarn build && screen -dmS node -L logs/out-${npm_package_version}.log yarn start"
+    "deploy": "yarn createtables && yarn build && screen -dmS node -L  -Logfile logs/out-${npm_package_version}.log yarn start"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
