--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "automatic",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,7 +9,8 @@
     "createtables": "node scripts/createTables.js",
     "prod": "echo logfile /home/spec/logs/out-${npm_package_version}.log > ~/.screenrc && screen -dmS node -L yarn start",
     "deploy": "yarn createtables && yarn build && yarn prod",
-    "logs": "cat ~/logs/out-${npm_package_version}.log"
+    "logs": "cat ~/logs/out-${npm_package_version}.log",
+    "get": "screen -x node"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
