--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "automatic",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,7 +10,11 @@
     "prod": "echo logfile /home/spec/logs/out-${npm_package_version}.log > ~/.screenrc && screen -dmS node -L yarn start",
     "deploy": "yarn createtables && yarn build && yarn prod",
     "logs": "cat ~/logs/out-${npm_package_version}.log",
-    "get": "screen -x node"
+    "get": "screen -x node",
+    "deletedemails": "node scripts/getDeletedEmails.js",
+    "keys": "node scripts/getKeys.js",
+    "access": "sudo cat /var/log/nginx/access.log",
+    "error": "sudo cat /var/log/nginx/error.log"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
