--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "17.0.1",
     "react-google-recaptcha": "^2.1.0",
     "react-google-recaptcha-v3": "^1.7.0",
+    "react-yandex-metrika": "^2.6.0",
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
