--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "cloudipsp-node-js-sdk": "^1.0.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "next": "9.5.5",
